# butt

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.linux-test  README.md  SECURITY.md  dist-workspace.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: precheck.sh  release.sh  run-linux-docker-test.sh  tag-release.sh
src/: cli.rs  follow.rs  limits.rs  main.rs  output.rs
tests/: tailbut_integration.rs
