[package]
name = "butt"
version = "0.1.3"
edition = "2024"
description = "Throttled tail/stdin monitor with regex highlighting"
repository = "https://github.com/farmerchris/butt"
homepage = "https://github.com/farmerchris/butt"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.13.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
